--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
-  "name": "helper.streamcraft",
+  "name": "streamcraft-helper-native",
   "version": "1.0.0",
   "description": "StreamCraft help script",
-  "main": "helper.sreamcraft.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "main": "./sreamcraft.js",
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Ferisef/helper.streamcraft.git"
   },
-  "author": "Anime-chan",
+  "author": "アニメちゃん",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Ferisef/helper.streamcraft/issues"
